<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.intelehealth.client.activities.setup_activity.SetupActivity"
    tools:showIn="@layout/activity_setup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView_Aid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="Android Id:" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="What is the URL to OpenMRS?" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_URL"
                    android:inputType="textUri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="URL" />
            </android.support.design.widget.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="Choose a location" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/demoMindmap"
                    />
            </android.support.design.widget.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="Choose an option for Mind Maps"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/demoMindmap"
                android:text="@string/setup_use_demo_mindmap"
                style="?android:textAppearanceMedium"
                android:checked="true"
                android:onClick="onRadioClick"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/downloadMindmap"
                android:text="@string/setup_download_mindmap"
                style="?android:textAppearanceMedium"
                android:onClick="onRadioClick"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Please enter your username and password"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusForward="@id/password"
                    android:imeOptions="actionNext"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/admin_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@id/admin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_admin_password"
                    android:imeActionId="@id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <Button
                android:id="@+id/setup_submit_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>